--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -5,10 +5,7 @@
     "colab": {
       "name": "Curso em Vídeo - PYTHON 3 - MUNDO 3.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "Iv1JvJMxr_3l",
-        "ORH0FziVvh-Q"
-      ]
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -808,36 +805,8 @@
       "metadata": {
         "id": "FXOT2GFjGGhK"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "galera[0][0]"
-      ],
-      "metadata": {
-        "id": "wWEpllJRGjoa",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 172
-        },
-        "outputId": "5d9a894a-237d-42b5-9f63-1f7f64c5afac"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-b356134cb56c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgalera\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'galera' is not defined"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -913,7 +882,7 @@
         },
         "outputId": "ef1cadd2-82b7-4b7d-a13a-7a4669e78ad3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -941,7 +910,7 @@
         "id": "LFL3gQWKGycT",
         "outputId": "d585765c-563b-452c-cb21-9738384924db"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1035,6 +1004,92 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 085: Crie um programa onde o usuário possa digitar\n",
+        "# sete valores numéricos e cadastre-os em uma lista única que mantenha\n",
+        "# separados os valores pares e ímpares.\n",
+        "# No final, mostre os valores pares e ímpares em ordem crescente.\n",
+        "# by geanclm in 05/04/2022 at 18:36h\n",
+        "lista = [[],[]]\n",
+        "for i in range (0,7):\n",
+        "    n = int(input(f'Digite o {i+1}º número: '))\n",
+        "    if n%2 == 0:\n",
+        "        lista[0].insert(0,n)\n",
+        "    else:\n",
+        "        lista[1].append(n)\n",
+        "print ('-'*33)\n",
+        "print (f'RELAÇÃO DE PARES DIGITADOS: {sorted(lista[0])}')\n",
+        "print (f'RELAÇÃO DE ÍMPARES DIGITADOS: {sorted(lista[1])}')"
+      ],
+      "metadata": {
+        "id": "izNor5sOg7Zy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 086: Crie um programa que declare uma matriz de dimensão 3×3\n",
+        "# e preencha com valores lidos pelo teclado. No final, mostre a matriz na tela,\n",
+        "# com a formatação correta.\n",
+        "# by geanclm in 06/07/2022 at 06:10h\n",
+        "\n",
+        "# solução geanclm\n",
+        "matriz = [[],[],[]]\n",
+        "for i in range (0,9):\n",
+        "    n = int(input(f'Digite o {i+1}º número: '))\n",
+        "    if i < 3: matriz[0].append(n)\n",
+        "    elif i >= 3 and i < 6:\n",
+        "        matriz[1].append(n)\n",
+        "    else: matriz[2].append(n)\n",
+        "print ('-'*33)\n",
+        "print ('MATRIZ 3x3')\n",
+        "print (f'{matriz[0]}\\n{matriz[1]}\\n{matriz[2]}')\n",
+        "\n",
+        "# solução Curso em Vídeo\n",
+        "# matriz = [[0,0,0],[0,0,0],[0,0,0]]\n",
+        "# for l in range(0,3):\n",
+        "#     for c in range(0,3):\n",
+        "#         matriz[l][c] = int(input(f'Digite um inteiro para a positção [{l},{c}]: '))\n",
+        "# for l in range(0,3):\n",
+        "#     for c in range(0,3):\n",
+        "#         print (f'[{matriz[l][c]:^5}]', end=' ')\n",
+        "#     print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "33XRYF27ETyf",
+        "outputId": "3ad31ba9-5485-47c4-b45e-df17917b1680"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o 1º número: 1\n",
+            "Digite o 2º número: 2\n",
+            "Digite o 3º número: 3\n",
+            "Digite o 4º número: 4\n",
+            "Digite o 5º número: 5\n",
+            "Digite o 6º número: 6\n",
+            "Digite o 7º número: 7\n",
+            "Digite o 8º número: 8\n",
+            "Digite o 9º número: 9\n",
+            "---------------------------------\n",
+            "MATRIZ 3x3\n",
+            "[1, 2, 3]\n",
+            "[4, 5, 6]\n",
+            "[7, 8, 9]\n"
+          ]
+        }
+      ]
     }
   ]
 }
