--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -5,7 +5,11 @@
     "colab": {
       "name": "Curso em Vídeo - PYTHON 3 - MUNDO 3.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [
+        "Iv1JvJMxr_3l",
+        "ORH0FziVvh-Q",
+        "RWEDdX2metCk"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -1061,32 +1065,171 @@
         "#     print()"
       ],
       "metadata": {
+        "id": "33XRYF27ETyf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 087: Aprimore o desafio anterior, mostrando no final:\n",
+        "# A) A soma de todos os valores pares digitados.\n",
+        "# B) A soma dos valores da terceira coluna.\n",
+        "# C) O maior valor da segunda linha.\n",
+        "# by geanclm in 07/04/2022 at 06:06h\n",
+        "\n",
+        "matriz = [[0,0,0],[0,0,0],[0,0,0]]\n",
+        "soma_pares = soma_terceira_coluna = maior_valor_segunda_linha = 0\n",
+        "for l in range(0,3):\n",
+        "    for c in range(0,3):\n",
+        "        matriz[l][c] = int(input(f'Digite um inteiro para a positção [{l},{c}]: '))\n",
+        "        if matriz[l][c]%2==0: # soma de todos os valores pares digitados\n",
+        "            soma_pares += matriz[l][c]\n",
+        "        if c == 2: # soma dos valores da terceira coluna\n",
+        "            soma_terceira_coluna += matriz[l][c]\n",
+        "        if l == 0 or matriz[1][c] > maior_valor_segunda_linha: # maior valor da segunda linha\n",
+        "            maior_valor_segunda_linha = matriz[1][c]\n",
+        "print ('-'*33)\n",
+        "for l in range(0,3):\n",
+        "    for c in range(0,3):\n",
+        "        print (f'[{matriz[l][c]:^5}]', end=' ')\n",
+        "    print()\n",
+        "print ('-'*33)\n",
+        "print (f'soma de todos os valores pares digitados: {soma_pares}')\n",
+        "print (f'soma dos valores da terceira coluna: {soma_terceira_coluna}')\n",
+        "print (f'maior valor da segunda linha: {maior_valor_segunda_linha}')"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "33XRYF27ETyf",
-        "outputId": "3ad31ba9-5485-47c4-b45e-df17917b1680"
+        "id": "FOwc-ilMNAqb",
+        "outputId": "d8be5ce6-9ad6-438f-85e8-e2ff30ac939d"
       },
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o 1º número: 1\n",
-            "Digite o 2º número: 2\n",
-            "Digite o 3º número: 3\n",
-            "Digite o 4º número: 4\n",
-            "Digite o 5º número: 5\n",
-            "Digite o 6º número: 6\n",
-            "Digite o 7º número: 7\n",
-            "Digite o 8º número: 8\n",
-            "Digite o 9º número: 9\n",
+            "Digite um inteiro para a positção [0,0]: 1\n",
+            "Digite um inteiro para a positção [0,1]: 2\n",
+            "Digite um inteiro para a positção [0,2]: 3\n",
+            "Digite um inteiro para a positção [1,0]: 4\n",
+            "Digite um inteiro para a positção [1,1]: 5\n",
+            "Digite um inteiro para a positção [1,2]: 6\n",
+            "Digite um inteiro para a positção [2,0]: 7\n",
+            "Digite um inteiro para a positção [2,1]: 8\n",
+            "Digite um inteiro para a positção [2,2]: 9\n",
             "---------------------------------\n",
-            "MATRIZ 3x3\n",
-            "[1, 2, 3]\n",
-            "[4, 5, 6]\n",
-            "[7, 8, 9]\n"
+            "[  1  ] [  2  ] [  3  ] \n",
+            "[  4  ] [  5  ] [  6  ] \n",
+            "[  7  ] [  8  ] [  9  ] \n",
+            "---------------------------------\n",
+            "soma de todos os valores pares digitados: 20\n",
+            "soma dos valores da terceira coluna: 18\n",
+            "maior valor da segunda linha: 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 088: Faça um programa que ajude um jogador da MEGA SENA\n",
+        "# a criar palpites.O programa vai perguntar quantos jogos serão gerados\n",
+        "# e vai sortear 6 números entre 1 e 60 para cada jogo, cadastrando tudo em uma lista composta.\n",
+        "# - - -\n",
+        "# by geanclm in 07/04/2022 at 08:20h\n",
+        "\n",
+        "# Import libs\n",
+        "from time import sleep\n",
+        "import time, random\n",
+        "from datetime import datetime, date\n",
+        "from random import sample\n",
+        "from pytz import timezone\n",
+        "\n",
+        "# date\n",
+        "registro_data_e_hora_completo = time.ctime()\n",
+        "hoje = datetime.now()\n",
+        "fuso_horario = timezone(\"America/Sao_Paulo\")\n",
+        "data_e_hora = hoje.astimezone(fuso_horario)\n",
+        "agora = data_e_hora.strftime(\"%A %B %d/%m/%Y %H:%M\"+\"h\")"
+      ],
+      "metadata": {
+        "id": "TSQ7H_MIZn3C"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "jogos = []\n",
+        "i,custo = 0,4.5\n",
+        "local = '--| LOTÉRICA MENTE MILIONÁRIA |--'\n",
+        "mensagem1 = 'Mentalize, acredite e solte!'\n",
+        "mensagem2 = 'BOA SORTE!'\n",
+        "bilhete = int(input(\"Número de bilhetes para listar? \"))\n",
+        "while i < bilhete:\n",
+        "    jogos.append(sorted(random.sample(range(1,60),6)))\n",
+        "    i += 1\n",
+        "print ('-'*33)\n",
+        "print (f'{local:^34}')\n",
+        "print ('-'*33)\n",
+        "print (f'''\n",
+        "Gerando jogo(s)...\n",
+        "''')\n",
+        "print ('-=' * 16)\n",
+        "for i, jogo in enumerate(jogos):\n",
+        "    sleep(1)\n",
+        "    print (f'Jogo{(i+1):<1}: {jogo}')\n",
+        "print ('-=' * 16)\n",
+        "print (f'''Total de {bilhete} bilhete(s) gerado(s)''')\n",
+        "print (f'''Valor bilhete 6 números: R$ {custo:,.2f}''')\n",
+        "print (f'''Valor total a pagar: R$ {(custo*bilhete):,.2f}''')\n",
+        "print (f'-'*33)\n",
+        "print (f'{mensagem1:^33}')\n",
+        "print (f'{mensagem2:^33}')\n",
+        "print ('-'*33)\n",
+        "print (f'{agora:^33}')\n",
+        "print ('-'*33)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kAynonyfZsBm",
+        "outputId": "e13b3406-1034-4fd7-91c4-dcb0df3590ee"
+      },
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Número de bilhetes para listar? 3\n",
+            "---------------------------------\n",
+            "--| LOTÉRICA MENTE MILIONÁRIA |-- \n",
+            "---------------------------------\n",
+            "\n",
+            "Gerando jogo(s)...\n",
+            "\n",
+            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+            "Jogo1: [13, 15, 22, 27, 39, 52]\n",
+            "Jogo2: [26, 39, 44, 46, 55, 59]\n",
+            "Jogo3: [32, 35, 42, 47, 48, 53]\n",
+            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+            "Total de 3 bilhete(s) gerado(s)\n",
+            "Valor bilhete 6 números: R$ 4.50\n",
+            "Valor total a pagar: R$ 13.50\n",
+            "---------------------------------\n",
+            "  Mentalize, acredite e solte!   \n",
+            "           BOA SORTE!            \n",
+            "---------------------------------\n",
+            "Thursday April 07/04/2022 08:27h \n",
+            "---------------------------------\n"
           ]
         }
       ]
