--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -5,11 +5,7 @@
     "colab": {
       "name": "Curso em Vídeo - PYTHON 3 - MUNDO 3.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "Iv1JvJMxr_3l",
-        "ORH0FziVvh-Q",
-        "RWEDdX2metCk"
-      ]
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -1107,7 +1103,7 @@
         "id": "FOwc-ilMNAqb",
         "outputId": "d8be5ce6-9ad6-438f-85e8-e2ff30ac939d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1160,7 +1156,7 @@
       "metadata": {
         "id": "TSQ7H_MIZn3C"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1197,42 +1193,319 @@
         "print ('-'*33)"
       ],
       "metadata": {
+        "id": "kAynonyfZsBm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 089: Crie um programa que leia nome e duas notas de vários alunos\n",
+        "# e guarde tudo em uma lista composta. No final, mostre um boletim contendo a média\n",
+        "# de cada um e permita que o usuário possa mostrar as notas de cada aluno individualmente.\n",
+        "# by geanclm in 07/04/2022 at 13:09h\n",
+        "aluno = []\n",
+        "turma = []\n",
+        "while True:    \n",
+        "    aluno.append(input('nome do aluno: '))\n",
+        "    aluno.append(float(input(f'nota 1 de {nome}: ')))\n",
+        "    aluno.append(float(input(f'nota 2: ')))\n",
+        "    turma.append(aluno[:])\n",
+        "    aluno.clear()\n",
+        "    continua = str(input('continua? [S/N]: ')).upper().strip()\n",
+        "    if continua not in 'S': break\n",
+        "print ('-'*25)\n",
+        "print (f'{\"No.\":<4}{\"Nome\":<10}{\"Média\":>10}')\n",
+        "print ('-'*25)\n",
+        "for i, aluno in enumerate(turma):\n",
+        "    print (f'{i:<4}{aluno[0]:<10}{((aluno[1]+aluno[2])/2):>10.2f}')\n",
+        "print ('-'*25)\n",
+        "while True:\n",
+        "    verificar = int(input('VERIFICAR NOTAS INDIVIDUAIS DO ALUNO? [999] sair: '))\n",
+        "    if verificar != 999:\n",
+        "        print (turma[verificar])\n",
+        "    else:\n",
+        "        break"
+      ],
+      "metadata": {
+        "id": "TpyH87hso2RO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Aula 19 – Dicionários"
+      ],
+      "metadata": {
+        "id": "VWQFmfkF6tHR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pessoas = {'nome': 'gean', 'sexo': 'm', 'idade': 46}\n",
+        "pessoas"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "kAynonyfZsBm",
-        "outputId": "e13b3406-1034-4fd7-91c4-dcb0df3590ee"
+        "id": "kT2E52VK_U4-",
+        "outputId": "ab86846b-9545-4e2e-82a2-0ca686fa9237"
       },
-      "execution_count": 136,
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'idade': 46, 'nome': 'gean', 'sexo': 'm'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pessoas.values()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s6pufQmD_18v",
+        "outputId": "3506c7c7-f6f0-49de-8473-20b0bd30d178"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values(['gean', 'm', 46])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pessoas.keys()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XXuMLwNTAHIV",
+        "outputId": "991fa205-5d14-4241-9495-c958b1e7488e"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['nome', 'sexo', 'idade'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pessoas.items()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GQnk7yAWAJZs",
+        "outputId": "689579a9-4005-40b8-aac9-afdaa36fc2c2"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_items([('nome', 'gean'), ('sexo', 'm'), ('idade', 46)])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "del pessoas['sexo']"
+      ],
+      "metadata": {
+        "id": "GGgivNEeA6Ur"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pessoas['peso'] = 72"
+      ],
+      "metadata": {
+        "id": "5u3XNXPyBTsj"
+      },
+      "execution_count": 76,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pessoas['nome'] = 'Carlos'"
+      ],
+      "metadata": {
+        "id": "6KKRM1WoBIb0"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for k,v in pessoas.items():\n",
+        "    print (k,v)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rLf6K1q4AdIC",
+        "outputId": "9289714c-2ee5-4e8b-e80e-55b7ece92235"
+      },
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Número de bilhetes para listar? 3\n",
-            "---------------------------------\n",
-            "--| LOTÉRICA MENTE MILIONÁRIA |-- \n",
-            "---------------------------------\n",
-            "\n",
-            "Gerando jogo(s)...\n",
-            "\n",
-            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
-            "Jogo1: [13, 15, 22, 27, 39, 52]\n",
-            "Jogo2: [26, 39, 44, 46, 55, 59]\n",
-            "Jogo3: [32, 35, 42, 47, 48, 53]\n",
-            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
-            "Total de 3 bilhete(s) gerado(s)\n",
-            "Valor bilhete 6 números: R$ 4.50\n",
-            "Valor total a pagar: R$ 13.50\n",
-            "---------------------------------\n",
-            "  Mentalize, acredite e solte!   \n",
-            "           BOA SORTE!            \n",
-            "---------------------------------\n",
-            "Thursday April 07/04/2022 08:27h \n",
-            "---------------------------------\n"
+            "nome Carlos\n",
+            "idade 46\n",
+            "peso 72\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Brasil = []\n",
+        "estado1 = {'uf':'João Pessoa', 'sigla': 'PB'}\n",
+        "estado2 = {'uf':'Florianópolis', 'sigla': 'SC'}"
+      ],
+      "metadata": {
+        "id": "qWRrLHI8BNOd"
+      },
+      "execution_count": 88,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Brasil.append(estado1)\n",
+        "Brasil.append(estado2)"
+      ],
+      "metadata": {
+        "id": "jx5sTfwTCE4F"
+      },
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Brasil"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r-dJJlIKDGK6",
+        "outputId": "3e0acf16-204a-44ef-f8db-36643f21e6aa"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'sigla': 'PB', 'uf': 'João Pessoa'}, {'sigla': 'SC', 'uf': 'Florianópolis'}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Brasil[0]['uf']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "CFqseQUwCbgF",
+        "outputId": "94b75852-b3be-4a60-b032-6924248b90c3"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'João Pessoa'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "estado = {}\n",
+        "Brasil = []\n",
+        "for i in range (0,3):\n",
+        "    estado['uf'] = str(input('unidade federativa: '))\n",
+        "    estado['sigla'] = str(input('Sigla do Estado: '))\n",
+        "    Brasil.append(estado.copy())\n",
+        "for i in Brasil:\n",
+        "    for k, v in i.items():\n",
+        "        print (k, v)"
+      ],
+      "metadata": {
+        "id": "Gd_ts-7RCdyM"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
