--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -1256,7 +1256,7 @@
         "id": "kT2E52VK_U4-",
         "outputId": "ab86846b-9545-4e2e-82a2-0ca686fa9237"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1282,7 +1282,7 @@
         "id": "s6pufQmD_18v",
         "outputId": "3506c7c7-f6f0-49de-8473-20b0bd30d178"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1308,7 +1308,7 @@
         "id": "XXuMLwNTAHIV",
         "outputId": "991fa205-5d14-4241-9495-c958b1e7488e"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1334,7 +1334,7 @@
         "id": "GQnk7yAWAJZs",
         "outputId": "689579a9-4005-40b8-aac9-afdaa36fc2c2"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1356,7 +1356,7 @@
       "metadata": {
         "id": "GGgivNEeA6Ur"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1367,7 +1367,7 @@
       "metadata": {
         "id": "5u3XNXPyBTsj"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1378,7 +1378,7 @@
       "metadata": {
         "id": "6KKRM1WoBIb0"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1394,7 +1394,7 @@
         "id": "rLf6K1q4AdIC",
         "outputId": "9289714c-2ee5-4e8b-e80e-55b7ece92235"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1417,7 +1417,7 @@
       "metadata": {
         "id": "qWRrLHI8BNOd"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1429,7 +1429,7 @@
       "metadata": {
         "id": "jx5sTfwTCE4F"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1444,7 +1444,7 @@
         "id": "r-dJJlIKDGK6",
         "outputId": "3e0acf16-204a-44ef-f8db-36643f21e6aa"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1471,7 +1471,7 @@
         "id": "CFqseQUwCbgF",
         "outputId": "94b75852-b3be-4a60-b032-6924248b90c3"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1506,6 +1506,52 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 090: Faça um programa que leia\n",
+        "# nome e média de um aluno, guardando também a situação em um dicionário.\n",
+        "# No final, mostre o conteúdo da estrutura na tela.\n",
+        "# by geanclm in 08/04/2022 at 17:42h\n",
+        "aluno = {}\n",
+        "turma = []\n",
+        "aluno['Aluno'] = input('Aluno: ')\n",
+        "aluno['Média'] = float(input(f'Média de {aluno[\"Aluno\"]}: '))\n",
+        "if aluno['Média'] >= 7:\n",
+        "    aluno['Status'] = 'APROVADO'\n",
+        "elif   5 <= aluno['Média'] < 7:\n",
+        "    aluno['Status'] = 'RECUPERAÇÃO'\n",
+        "else:\n",
+        "    aluno['Status'] = 'REPROVADO'\n",
+        "turma.append(aluno.copy())\n",
+        "print ('-'*20)\n",
+        "for i in turma:\n",
+        "    for k, v in i.items():\n",
+        "        print (f'{k:<6}: {v:>12}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FsUdy1W2rMvU",
+        "outputId": "ce82b7f9-3cf8-4607-e21b-464b0dee7d5a"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aluno: Gean\n",
+            "Média de Gean: 9.95\n",
+            "--------------------\n",
+            "Aluno :         Gean\n",
+            "Média :         9.95\n",
+            "Status:     APROVADO\n"
+          ]
+        }
+      ]
     }
   ]
 }
