--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -1531,24 +1531,67 @@
         "        print (f'{k:<6}: {v:>12}')"
       ],
       "metadata": {
+        "id": "FsUdy1W2rMvU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 091: Crie um programa onde 4 jogadores joguem um dado e tenham\n",
+        "# resultados aleatórios. Guarde esses resultados em um dicionário em Python.\n",
+        "# No final, coloque esse dicionário em ordem, sabendo que o vencedor tirou o maior número no dado.\n",
+        "# by geanclm in 09/04/2022 at 09:25h\n",
+        "from random import randint\n",
+        "from time import sleep\n",
+        "from operator import itemgetter # função importante para ordenar o dicionário\n",
+        "jogador = {}\n",
+        "for i in range(0,4):\n",
+        "    jogador[f'jogador{i+1}'] = randint(1,6)\n",
+        "print (f'{\"-\"*33:^33}')\n",
+        "print (f'{\"---| JOGO DE DADOS |---\":^33}')\n",
+        "print (f'{\"-\"*33:^33}')\n",
+        "for k,v in jogador.items():\n",
+        "    print (f'{k} lançou o valor: {v}')\n",
+        "    sleep(1)\n",
+        "print ()\n",
+        "print (f'{\"-\"*33:^33}')\n",
+        "print (f'{\"---| RANKING |---\":^33}')\n",
+        "print (f'{\"-\"*33:^33}')\n",
+        "ranking = {}\n",
+        "ranking = sorted(jogador.items(), key=itemgetter(1), reverse=True)\n",
+        "for i,v in enumerate(ranking):\n",
+        "    print (f'{i+1}º Lugar: {v[0]} com {v[1]}')"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "FsUdy1W2rMvU",
-        "outputId": "ce82b7f9-3cf8-4607-e21b-464b0dee7d5a"
+        "id": "5wM6vtsO8LSe",
+        "outputId": "cce62168-dc4d-48cb-d358-eddb46eefb4d"
       },
-      "execution_count": 46,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Aluno: Gean\n",
-            "Média de Gean: 9.95\n",
-            "--------------------\n",
-            "Aluno :         Gean\n",
-            "Média :         9.95\n",
-            "Status:     APROVADO\n"
+            "---------------------------------\n",
+            "     ---| JOGO DE DADOS |---     \n",
+            "---------------------------------\n",
+            "jogador1 lançou o valor: 6\n",
+            "jogador2 lançou o valor: 1\n",
+            "jogador3 lançou o valor: 3\n",
+            "jogador4 lançou o valor: 2\n",
+            "\n",
+            "---------------------------------\n",
+            "        ---| RANKING |---        \n",
+            "---------------------------------\n",
+            "1º Lugar: jogador1 com 6\n",
+            "2º Lugar: jogador3 com 3\n",
+            "3º Lugar: jogador4 com 2\n",
+            "4º Lugar: jogador2 com 1\n"
           ]
         }
       ]
