--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -1193,10 +1193,42 @@
         "print ('-'*33)"
       ],
       "metadata": {
-        "id": "kAynonyfZsBm"
+        "id": "kAynonyfZsBm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ba69be6a-cf95-4f12-b30b-00d106cc9f64"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Número de bilhetes para listar? 3\n",
+            "---------------------------------\n",
+            "--| LOTÉRICA MENTE MILIONÁRIA |-- \n",
+            "---------------------------------\n",
+            "\n",
+            "Gerando jogo(s)...\n",
+            "\n",
+            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+            "Jogo1: [6, 12, 30, 43, 50, 56]\n",
+            "Jogo2: [11, 22, 37, 43, 50, 53]\n",
+            "Jogo3: [6, 12, 19, 27, 35, 47]\n",
+            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+            "Total de 3 bilhete(s) gerado(s)\n",
+            "Valor bilhete 6 números: R$ 4.50\n",
+            "Valor total a pagar: R$ 13.50\n",
+            "---------------------------------\n",
+            "  Mentalize, acredite e solte!   \n",
+            "           BOA SORTE!            \n",
+            "---------------------------------\n",
+            "Saturday April 09/04/2022 14:51h \n",
+            "---------------------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1565,36 +1597,53 @@
         "    print (f'{i+1}º Lugar: {v[0]} com {v[1]}')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5wM6vtsO8LSe",
-        "outputId": "cce62168-dc4d-48cb-d358-eddb46eefb4d"
+        "id": "5wM6vtsO8LSe"
       },
-      "execution_count": 110,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "---------------------------------\n",
-            "     ---| JOGO DE DADOS |---     \n",
-            "---------------------------------\n",
-            "jogador1 lançou o valor: 6\n",
-            "jogador2 lançou o valor: 1\n",
-            "jogador3 lançou o valor: 3\n",
-            "jogador4 lançou o valor: 2\n",
-            "\n",
-            "---------------------------------\n",
-            "        ---| RANKING |---        \n",
-            "---------------------------------\n",
-            "1º Lugar: jogador1 com 6\n",
-            "2º Lugar: jogador3 com 3\n",
-            "3º Lugar: jogador4 com 2\n",
-            "4º Lugar: jogador2 com 1\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 092: Crie um programa que leia\n",
+        "# nome, ano de nascimento e carteira de trabalho e cadastre-o (com idade) em um dicionário.\n",
+        "# Se por acaso a CTPS for diferente de ZERO,\n",
+        "# o dicionário receberá também o ano de contratação e o salário. Calcule e acrescente,\n",
+        "# além da idade, com quantos anos a pessoa vai se aposentar.\n",
+        "# ---\n",
+        "# by geanclm in 10/04/2022 at 07:35h\n",
+        "\n",
+        "# import lib\n",
+        "from datetime import date\n",
+        "\n",
+        "# definição de variáveis\n",
+        "ano = date.today().year\n",
+        "tt = 35\n",
+        "cadastro = {}\n",
+        "\n",
+        "# entrada de dados\n",
+        "cadastro['Nome'] = input('Nome: ')\n",
+        "cadastro['Nascimento'] = int(input(f'Ano de nascimento de {cadastro[\"Nome\"]}: '))\n",
+        "cadastro['idade']= ano - cadastro['Nascimento']\n",
+        "cadastro['CTPS'] = int(input('Carteira de trabalho [0 não tem]: '))\n",
+        "if cadastro['CTPS'] != 0:\n",
+        "    cadastro['Contratação'] = int(input('Ano de contratação: '))\n",
+        "    cadastro['Salário'] = float(input('Salário R$: '))\n",
+        "    cadastro['Aposentadoria'] = (cadastro['Contratação'] - cadastro['Nascimento'])+tt\n",
+        "\n",
+        "# saída dos dados\n",
+        "print ()\n",
+        "print (f'{\"-\"*33:^33}')\n",
+        "print (f'{\"---| DADOS CADASTRADOS |---\":^33}')\n",
+        "print (f'{\"-\"*33:^33}')\n",
+        "for k,v in cadastro.items():\n",
+        "    print(f'{k}: {v}')"
+      ],
+      "metadata": {
+        "id": "Rri3rr0G-_rD"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
