--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -1644,6 +1644,71 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 093: Crie um programa que gerencie o aproveitamento de um jogador de futebol.\n",
+        "# O programa vai ler o nome do jogador e quantas partidas ele jogou.\n",
+        "# Depois vai ler a quantidade de gols feitos em cada partida.\n",
+        "# No final, tudo isso será guardado em um dicionário,\n",
+        "# incluindo o total de gols feitos durante o campeonato.\n",
+        "# by geanclm in 10/04/2022 at 19:44h\n",
+        "\n",
+        "jogador = {}\n",
+        "golsPorPartida = []\n",
+        "jogador['Nome'] = input('Nome do jogador: ')\n",
+        "nPartidas = int(input(f'Quantas partidas {jogador[\"Nome\"]} jogou? '))\n",
+        "for i in range(0, nPartidas):\n",
+        "    golsPorPartida.append(int(input(f'Números de gols da {i+1}º partida: ')))\n",
+        "jogador['gols'] = golsPorPartida[:]\n",
+        "jogador['total'] = sum(golsPorPartida)\n",
+        "print('-='*30)\n",
+        "print(jogador)\n",
+        "print('-='*30)\n",
+        "for k,v in jogador.items():\n",
+        "    print (f'O campo {k} tem o valor {v}')\n",
+        "print('-='*30)\n",
+        "print (f'O jogador {jogador[\"Nome\"]} jogou {len(jogador[\"gols\"])} patidas')\n",
+        "for i,v in enumerate(golsPorPartida):\n",
+        "    print (f' => Na partida {i+1}, fez {v} gols')\n",
+        "print('-='*30)\n",
+        "print (f'Foi um total de {jogador[\"total\"]} gols')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MKNTiJr-le9s",
+        "outputId": "82705546-0693-4679-cbb3-594254ae5769"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nome do jogador: Hélio\n",
+            "Quantas partidas Hélio jogou? 3\n",
+            "Números de gols da 1º partida: 4\n",
+            "Números de gols da 2º partida: 0\n",
+            "Números de gols da 3º partida: 1\n",
+            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+            "{'Nome': 'Hélio', 'gols': [4, 0, 1], 'total': 5}\n",
+            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+            "O campo Nome tem o valor Hélio\n",
+            "O campo gols tem o valor [4, 0, 1]\n",
+            "O campo total tem o valor 5\n",
+            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+            "O jogador Hélio jogou 3 patidas\n",
+            " => Na partida 1, fez 4 gols\n",
+            " => Na partida 2, fez 0 gols\n",
+            " => Na partida 3, fez 1 gols\n",
+            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+            "Foi um total de 5 gols\n"
+          ]
+        }
+      ]
     }
   ]
 }
